--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>First Date</title>
+  <title>Mi curriculum, que nervios</title>
   <link rel="stylesheet" href="./css/index.css" />
   <link rel="shortcut icon"
     href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_corazón.svg/1200px-Heart_corazón.svg.png"
@@ -14,14 +14,14 @@
 
 <body class="body">
   <article class="hero">
-    <h1 class="hero__title">❤ ¿Quieres salir conmigo? </h1>
+    <h1 class="hero__title">❤ ¿Si puedo ser tu producción? Danna</h1>
     <figure class="hero__image-container">
       <img
         src="https://1.bp.blogspot.com/-qsvCBLdgYj8/XCLjZK9_RMI/AAAAAAAABBA/BsQ7kYtn9qkPkQ3VhF8g_1Er73bGs7KGQCLcBGAs/w1200-h630-p-k-no-nu/srewk.jpg"
         alt="Imagen del amor" class="hero__image" />
     </figure>
-    <button id="heroButtonSi" class="hero__button">🌚Si soy🌚</button>
-    <button id="heroButtonNo" class="hero__button">😭Nel Perro😭</button>
+    <button id="heroButtonSi" class="hero__button">🌚Siuuuu🌚</button>
+    <button id="heroButtonNo" class="hero__button">😭Nel Perro alv😭</button>
   </article>
 
   <script src="./js/index.js" type="module"></script>
