--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 <body class="body">
   <article class="hero">
     <h1 class="hero__title">❤ ¿Si puedo ser tu producción? Danna</h1>
+    <div> '🥰 Requisitos cumplidos? Detalles \n
+  - tiene que estudiar algo [9 semestre y eran 8 ajajaj] \n
+  - cero de fiestas o trago [mi unico vicio es messi] \n
+  - que le guste el deporte [viva el fulbo] \n
+  - que le guste los videojuegos [más que vivir]  \n
+  - que podamos jugar videojuegos [a pesar de lo manco] \n
+  - que le guste lo tranqui [siempre] \n
+  - que me regale legos o carritos hotweels [hay colección] \n
+  - que trabaje [trabajando duro o durando en el trabajo] \n
+  - que no me ignore [difícil ignorarte siendo tan genial] \n
+  - que le guste el café como a mi [claro que shi] \n
+  - y que sea un apoyo mutuo 🥰 [siempre] ')</div>
     <figure class="hero__image-container">
       <img
         src="https://1.bp.blogspot.com/-qsvCBLdgYj8/XCLjZK9_RMI/AAAAAAAABBA/BsQ7kYtn9qkPkQ3VhF8g_1Er73bGs7KGQCLcBGAs/w1200-h630-p-k-no-nu/srewk.jpg"
