--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="body">
   <article class="hero">
-      <h1> '🥰 Requisitos cumplidos? Detalles \n
+      <h1 class="hero__text"> '🥰 Requisitos cumplidos? Detalles \n
   - tiene que estudiar algo [9 semestre y eran 8 ajajaj] \n
   - cero de fiestas o trago [mi unico vicio es messi] \n
   - que le guste el deporte [viva el fulbo] \n
