--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <body class="body">
   <article class="hero">
-      <h1 class="hero__title"> '🥰 Requisitos cumplidos? Detalles \n
+    
+    <h1 class="hero__title">'🥰 Requisitos cumplidos? Detalles \n
   - tiene que estudiar algo [9 semestre y eran 8 ajajaj] \n
   - cero de fiestas o trago [mi unico vicio es messi] \n
   - que le guste el deporte [viva el fulbo] \n
@@ -25,8 +26,8 @@
   - que trabaje [trabajando duro o durando en el trabajo] \n
   - que no me ignore [difícil ignorarte siendo tan genial] \n
   - que le guste el café como a mi [claro que shi] \n
-  - y que sea un apoyo mutuo 🥰 [siempre] ')</h1>
-    <h1 class="hero__title">❤ ¿Si puedo ser tu producción? Danna</h1>
+  - y que sea un apoyo mutuo 🥰 [siempre] ' \n
+      ❤ ¿Si puedo ser tu producción? Danna</h1>
   
     <figure class="hero__image-container">
       <img
