--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
   <article class="hero">
     
     <h1 class="hero__title">'🥰 Requisitos cumplidos? Detalles \n
-  - tiene que estudiar algo [9 semestre y eran 8 ajajaj] \n
-  - cero de fiestas o trago [mi unico vicio es messi] \n
-  - que le guste el deporte [viva el fulbo] \n
-  - que le guste los videojuegos [más que vivir]  \n
-  - que podamos jugar videojuegos [a pesar de lo manco] \n
-  - que le guste lo tranqui [siempre] \n
-  - que me regale legos o carritos hotweels [hay colección] \n
-  - que trabaje [trabajando duro o durando en el trabajo] \n
-  - que no me ignore [difícil ignorarte siendo tan genial] \n
-  - que le guste el café como a mi [claro que shi] \n
-  - y que sea un apoyo mutuo 🥰 [siempre] ' \n
+  - tiene que estudiar algo -9 semestre y eran 8 ajajaj-\n
+  - cero de fiestas o trago -mi unico vicio es messi-\n
+  - que le guste el deporte -viva el fulbo-\n
+  - que le guste los videojuegos -más que vivir- \n
+  - que podamos jugar videojuegos -a pesar de lo manco-\n
+  - que le guste lo tranqui -siempre-\n
+  - que me regale legos o carritos hotweels -hay colección-\n
+  - que trabaje -trabajando duro o durando en el trabajo-\n
+  - que no me ignore -difícil ignorarte siendo tan genial-\n
+  - que le guste el café como a mi -claro que shi-\n
+  - y que sea un apoyo mutuo 🥰 -siempre-' \n
       ❤ ¿Si puedo ser tu producción? Danna</h1>
   
     <figure class="hero__image-container">
