--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
 <body class="body">
   <article class="hero">
-    
-    <h1 class="hero__title">❤ ¿Si puedo ser tu producción? Danna</h1>
-  
+    <h1 class="hero__title">❤ ¿Si puedo ser tu producción Danna? </h1>
     <figure class="hero__image-container">
       <img
         src="https://1.bp.blogspot.com/-qsvCBLdgYj8/XCLjZK9_RMI/AAAAAAAABBA/BsQ7kYtn9qkPkQ3VhF8g_1Er73bGs7KGQCLcBGAs/w1200-h630-p-k-no-nu/srewk.jpg"
