--- a/index.html
+++ b/index.html
@@ -1,30 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mi curriculum, que nervios</title>
-  <link rel="stylesheet" href="./css/index.css" />
-  <link rel="shortcut icon"
-    href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_corazón.svg/1200px-Heart_corazón.svg.png"
-    type="image/x-icon">
-</head>
-
-<body class="body">
-  <article class="hero">
-    <h1 class="hero__title">❤ ¿Si puedo ser tu producción Danna? </h1>
-    <figure class="hero__image-container">
-      <img
-        src="https://1.bp.blogspot.com/-qsvCBLdgYj8/XCLjZK9_RMI/AAAAAAAABBA/BsQ7kYtn9qkPkQ3VhF8g_1Er73bGs7KGQCLcBGAs/w1200-h630-p-k-no-nu/srewk.jpg"
-        alt="Imagen del amor" class="hero__image" />
-    </figure>
-    <button id="heroButtonSi" class="hero__button">🌚Siuuuu🌚</button>
-    <button id="heroButtonNo" class="hero__button">😭Nel Perro alv😭</button>
-  </article>
-
-  <script src="./js/index.js" type="module"></script>
-</body>
-
-</html>
+<!DOCTYPE html><br><html lang="es"><br><br><head><br>  <meta charset="UTF-8" /><br>  <meta http-equiv="X-UA-Compatible" content="IE=edge" /><br>  <meta name="viewport" content="width=device-width, initial-scale=1.0" /><br>  <title>Mi curriculum, que nervios</title><br>  <link rel="stylesheet" href="./css/index.css" /><br>  <link rel="shortcut icon"<br>    href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_corazón.svg/1200px-Heart_corazón.svg.png"<br>    type="image/x-icon"><br></head><br><br><body class="body"><br>  <article class="hero"><br>    <h1 class="hero__title">Requisitos cumplidos? Detalles \n<br>  - tiene que estudiar algo [9 semestre y eran 8 ajajaj] \n<br>  - cero de fiestas o trago [mi unico vicio es messi] \n<br>  - que le guste el deporte [viva el fulbo] \n<br>  - que le guste los videojuegos [más que vivir]  \n<br>  - que podamos jugar videojuegos [a pesar de lo manco] \n<br>  - que le guste lo tranqui [siempre] \n<br>  - que me regale legos o carritos hotweels [hay colección] \n<br>  - que trabaje [trabajando duro o durando en el trabajo] \n<br>  - que no me ignore [difícil ignorarte siendo tan genial] \n<br>  - que le guste el café como a mi [claro que shi] \n<br>  - y que sea un apoyo mutuo 🥰 [siempre]<br>      ❤ ¿Si puedo ser tu producción Danna? </h1><br>    <figure class="hero__image-container"><br>      <img<br>        src="https://1.bp.blogspot.com/-qsvCBLdgYj8/XCLjZK9_RMI/AAAAAAAABBA/BsQ7kYtn9qkPkQ3VhF8g_1Er73bGs7KGQCLcBGAs/w1200-h630-p-k-no-nu/srewk.jpg"<br>        alt="Imagen del amor" class="hero__image" /><br>    </figure><br>    <button id="heroButtonSi" class="hero__button">🌚Siuuuu🌚</button><br>    <button id="heroButtonNo" class="hero__button">😭Nel Perro alv😭</button><br>  </article><br><br>  <script src="./js/index.js" type="module"></script><br></body><br><br></html><br>
