--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="body">
   <article class="hero">
-    <h1 class="hero__title">🥰 Requisitos cumplidos? Detalles <br>
+    <h2 class="hero__title">🥰 Requisitos cumplidos? Detalles <br>
   - tiene que estudiar algo [9 semestre y eran 8 ajajaj] <br>
   - cero de fiestas o trago [mi unico vicio es messi] <br>
   - que le guste el deporte [viva el fulbo] <br>
@@ -25,7 +25,8 @@
   - que trabaje [trabajando duro o durando en el trabajo] <br>
   - que no me ignore [difícil ignorarte siendo tan genial] <br>
   - que le guste el café como a mi [claro que shi] <br>
-  - y que sea un apoyo mutuo 🥰 [siempre]  <br> 
+  - y que sea un apoyo mutuo 🥰 [siempre]  <br> </h2>
+    <h1 class="hero__title">
       ❤ ¿Si puedo ser tu producción Danna? </h1>
     <figure class="hero__image-container">
       <img
