--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="body">
   <article class="hero">
-    <h2 class="hero__title">🥰 Requisitos cumplidos? Detalles <br>
+    <h2 class="hero__text">🥰 Requisitos cumplidos? Detalles <br>
   - tiene que estudiar algo [9 semestre y eran 8 ajajaj] <br>
   - cero de fiestas o trago [mi unico vicio es messi] <br>
   - que le guste el deporte [viva el fulbo] <br>
@@ -26,8 +26,7 @@
   - que no me ignore [difícil ignorarte siendo tan genial] <br>
   - que le guste el café como a mi [claro que shi] <br>
   - y que sea un apoyo mutuo 🥰 [siempre]  <br> </h2>
-    <h1 class="hero__title">
-      ❤ ¿Si puedo ser tu producción Danna? </h1>
+    <h1 class="hero__title"> ❤ ¿Si puedo ser tu producción Danna? </h1>
     <figure class="hero__image-container">
       <img
         src="https://1.bp.blogspot.com/-qsvCBLdgYj8/XCLjZK9_RMI/AAAAAAAABBA/BsQ7kYtn9qkPkQ3VhF8g_1Er73bGs7KGQCLcBGAs/w1200-h630-p-k-no-nu/srewk.jpg"
